Shenandoah: Ensure _disarmed_value offset < 128

XMLWordPrintable

    • gc
    • b22

        Aleksey discovered if the offset exceeds 128, nmethod entry barrier verifier will fail as following:

        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/gc/shared/barrierSetNMethod_x86.cpp:66), pid=2763, tid=2780
        # fatal error: Not properly aligned

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: