8244420: Shenandoah: Ensure _disarmed_value offset < 128

Reviewed-by: rkennke